IMR 219 header overlap fix [skip-ci]

--- a/ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
+++ b/ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
@@ -545,6 +545,10 @@ header .container-content {
     }
   }
 
+  .top-page-container.container.responsivegrid.partial-background {
+    padding-top: 12rem;
+  }
+
   div div.image_component {
     margin: 1rem 0rem !important;
     // width: 42.12rem !important;
